--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ tasks.withType(JavaCompile) {
 }
 
 description = 'LBU-BB-B2-Utils'
-    group = 'uk.ac.keedsbeckett'
+    group = 'uk.ac.leedsbeckett'
 repositories {
     mavenCentral()
     maven {
@@ -23,4 +23,24 @@ dependencies {
     compileOnly "org.apache.activemq:activemq-client:5.15.11"
     
     testImplementation     'junit:junit:4.13'
+}
+
+publishing {
+    publications {
+        library(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url "https://gitlab.leedsbeckett.ac.uk/api/v4/projects/366/packages/maven"
+            credentials(HttpHeaderCredentials) {
+                name = "Private-Token"
+                value = gitLabPrivateToken // the variable resides in ~/.gradle/gradle.properties
+            }
+            authentication {
+                header(HttpHeaderAuthentication)
+            }
+        }
+    }
 }
